--- a/.classpath
+++ b/.classpath
@@ -1,7 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry excluding="toHTMLandTXT/" kind="src" path="ConvertTextToHTMLandLyrics/src"/>
 	<classpathentry kind="src" path="ConvertTextToHTMLandLyrics/src/toHTMLandTXT"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/mdavi/OneDrive/Documents/Furman/Classes/5 - Jnr. First Semester/CSC 353 - Software Engineering/gson-2.8.6.jar">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
